--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&family=Nunito:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>Turnip Trader</title>
+    <title>🥕 Turnip Trader 🍃</title>
   </head>
   <body>
     <div id="root"></div>
